--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <!-- <body onload="alert('alert by Javascript in onload attribute of body');"> -->
 
-<body>
+<body class="container">
     <!-- <h1>H1 Heading</h1>
     <h2>H2 Heading</h2>
 
@@ -47,6 +47,7 @@
     <button class="drumBtns btn" id="btn-3" style="background-color: rgb(149, 69, 4)">Drum Joke</button>
     <button class="drumBtns btn" id="btn-4" style="background-color: rgb(191, 6, 111)">Guitar</button>
     <button class="drumBtns btn" id="btn-5" style="background-color: rgb(6, 208, 47)">Bass Rumble</button>
+    <button class="drumBtns btn" id="btn-5" style="background-color: rgb(85, 72, 255)">Other</button>
 
     <br>
     <br>
@@ -59,7 +60,9 @@
 
     <!-- <script type="text/Javascript" charset="UTF-8" src="index.js"></script> -->
     <!-- <script type="text/Javascript" charset="UTF-8" src="StyleByJavaScript.js"></script> -->
+    <script type="text/Javascript" charset="UTF-8" src="ConstructorFunctions.js"></script>
     <script type="text/Javascript" charset="UTF-8" src="SoundByJavaScript.js"></script>
+    
 </body>
 
 </html>
