Added jQuert.js file

--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
     <br>
     <br>
 
-    <button class="drumBtns btn" id="btn-1" style="background-color: rgb(208, 255, 52)">Drum</button>
-    <button class="drumBtns btn" id="btn-2" style="background-color: rgb(6, 169, 218)">Bass</button>
-    <button class="drumBtns btn" id="btn-3" style="background-color: rgb(149, 69, 4)">Drum Joke</button>
-    <button class="drumBtns btn" id="btn-4" style="background-color: rgb(191, 6, 111)">Guitar</button>
-    <button class="drumBtns btn" id="btn-5" style="background-color: rgb(6, 208, 47)">Bass Rumble</button>
-    <button class="drumBtns btn" id="btn-5" style="background-color: rgb(85, 72, 255)">Other</button>
+    <button class="drumBtns btn" id="btn-1" style="background-color: rgb(208, 255, 52)">d</button>
+    <button class="drumBtns btn" id="btn-2" style="background-color: rgb(6, 169, 218)">b</button>
+    <button class="drumBtns btn" id="btn-3" style="background-color: rgb(149, 69, 4)">j</button>
+    <button class="drumBtns btn" id="btn-4" style="background-color: rgb(191, 6, 111)">g</button>
+    <button class="drumBtns btn" id="btn-5" style="background-color: rgb(6, 208, 47)">r</button>
+    <button class="drumBtns btn" id="btn-6" style="background-color: rgb(85, 72, 255)">k</button>
 
     <br>
     <br>
@@ -58,11 +58,14 @@
         <li class="item">Third</li>
     </ul>
 
+    <!-- jQuery CDN must be places before the .js file -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <!-- <script type="text/Javascript" charset="UTF-8" src="index.js"></script> -->
     <!-- <script type="text/Javascript" charset="UTF-8" src="StyleByJavaScript.js"></script> -->
     <script type="text/Javascript" charset="UTF-8" src="ConstructorFunctions.js"></script>
     <script type="text/Javascript" charset="UTF-8" src="SoundByJavaScript.js"></script>
     
+    <script src="jQuery.js"></script>
 </body>
 
 </html>
